# minibase

./: README.md  main.py  pyproject.toml  setup.py  sqlite3.db
minibase/: __init__.py  authorization.py  config.py  configuration.py  database.py  main.py  minibase.py  model.py  record.py  sqlite3.db  table.py  utils.py
minibase/models/: record.py  table.py
tests/: test.py
