[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minibase"
version = "0.1.0"
authors = [
  { name="Samuel DeSantis", email="minibase.py@gmail.com" },
]
description = "A simple SQLite database wrapper."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Samuel-DeSantis/minibase"
Issues = "https://github.com/Samuel-DeSantis/minibase/issues"